fixed homepage spacing

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,3 +5,7 @@
 #form {
   padding-top: 40px;
 }
+
+#hero {
+    height: 375px;
+}
